--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "",
   "license": "ISC",
   "homepage": "https://juliocesardev.github.io/personal-website/",
-  "description": "",
   "dependencies": {
     "gh-pages": "^2.0.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juliocesardev/personal-website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/juliocesardev/personal-website/issues"
+  },
+  "description": ""
 }
